Исправил логику расчета.